<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paraAtras"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="34dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:text="@string/energia"
        android:textSize="80sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="329dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:text="@string/numero"
        android:textSize="60sp"
        android:backgroundTint="@color/blue"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="131dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/consumo"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="540dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/datos"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="601dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/costo"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="480dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>